--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@tailwindcss/vite": "^4.0.3",
     "axios": "^1.7.9",
+    "daisyui": "^5.0.0",
     "framer-motion": "^12.0.11",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
