Remove unnecessary quotes from DATABASE_URL in .env file

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-DATABASE_URL="mongodb+srv://amith:Hello%40mith18@mongodb.tyrxhwb.mongodb.net/Hackindia"
-
+DATABASE_URL=mongodb+srv://amith:Hello%40mith18@mongodb.tyrxhwb.mongodb.net/Hackindia
 JWT_SECRET=secret
 JWT_EXPIRES_IN=1d
 PORT=3000
