--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
+    "chart.js": "^4.4.8",
+    "lucide-react": "^0.479.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
