--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.0.0",
     "@tailwindcss/vite": "^4.0.12",
     "chart.js": "^4.4.8",
     "framer-motion": "^12.4.10",
