--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@splinetool/react-spline": "^4.0.0",
     "@tailwindcss/vite": "^4.0.12",
+    "axios": "^1.8.2",
     "chart.js": "^4.4.8",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.479.0",
