Integrated Freelancer Side

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ JWT_EXPIRES_IN=1d
 PORT=3000
 EMAIL=bytechat.co@gmail.com
 EMAIL_PASSWORD=aaa
+GEMINI_API_KEY=AIzaSyC0-Si3Uo7tYK9NQPYEvsDdfkxav3sgaE8
